--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="Summary">
       <h2>Preparation time</h2>
       <ul>
-        <li><b>Total</b>: Approximately 10 minutes</li>
-        <li><b>Preparation</b>: 5 minutes</li>
-        <li><b>Cooking</b>: 5 minutes</li>
+        <li><em>Total</em>: Approximately 10 minutes</li>
+        <li><em>Preparation</em>: 5 minutes</li>
+        <li><em>Cooking</em>: 5 minutes</li>
       </ul>
     </div>
     <h2>Ingredients</h2>
@@ -47,16 +47,16 @@
     <hr>
     <h2>Instructions</h2>
     <ol class="inline">
-      <li><b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+      <li><em>Beat the eggs</em>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
         You can add a tablespoon of water or milk for a fluffier texture.</li>
-      <li><b>Heat the pan</b>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-      <li><b>Cook the omelette</b>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+      <li><em>Heat the pan</em>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li><em>Cook the omelette</em>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
         the eggs evenly coat the surface.</li>
-      <li><b>Add fillings (optional)</b>: When the eggs begin to set at the edges but are still slightly runny in the
+      <li><em>Add fillings (optional)</em>: When the eggs begin to set at the edges but are still slightly runny in the
         middle, sprinkle your chosen fillings over one half of the omelette.</li>
-      <li><b>Fold and serve</b>: As the omelette continues to cook, carefully lift one edge and fold it over the
+      <li><em>Fold and serve</em>: As the omelette continues to cook, carefully lift one edge and fold it over the
         fillings. Let it cook for another minute, then slide it onto a plate.</li>
-      <li><b>Enjoy</b>: Serve hot, with additional salt and pepper if needed.</li>
+      <li><em>Enjoy</em>: Serve hot, with additional salt and pepper if needed.</li>
     </ol>
     <hr>
     <h2>Nutrition</h2>
@@ -82,7 +82,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">MJ Yee</a>.
   </div>
 </body>
 
